--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(OpenGL_GL_PREFERENCE LEGACY)
 # adds local subdirectory
 add_subdirectory("raylib")
 
-add_executable(raylib_platformer src/main.cpp src/game.cpp src/game.h src/player.cpp src/player.h)
+add_executable(raylib_platformer src/main.cpp src/game.cpp src/game.h src/player.cpp src/player.h src/vector_math.h)
 
 # where -Wall -Wextra -Wpedantic are extra compiler warnings
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
